# uav_swarm_mission_arch

./: README.md
behaviour_trees_pkg/: CMakeLists.txt  package.xml
behaviour_trees_pkg/action/: FollowTrajBH.action  FollowTrajBh.action  LandBH.action  LandBh.action  TakeOffBH.action  TakeOffBh.action
behaviour_trees_pkg/config/: parallel_mission_02.xml  parallel_mission_13.xml
behaviour_trees_pkg/include/behaviour_trees_pkg/: arming_bh_server.hpp  followtraj_bh_server.hpp  land_bh_server.hpp  offboard_bh_server.hpp  takeoff_bh_server.hpp
behaviour_trees_pkg/include/behaviour_trees_pkg/action/: arming.hpp  follow_traj.hpp  land.hpp  offboard.hpp  take_off.hpp
behaviour_trees_pkg/launch/: mission_02.py  mission_13.py
behaviour_trees_pkg/scripts/: arming_bh_client.py  followtraj_bh_client.py  land_bh_client.py  offboard_bh_client.py  takeoff_bh_client.py
behaviour_trees_pkg/src/: arming_bh_server.cpp  as2_behavior_tree_node.cpp  bt_manager.cpp  followtraj_bh_server.cpp  land_bh_server.cpp  offboard_bh_server.cpp  takeoff_bh_server.cpp
executables/: clean.bash  configure_control_mode.bash  configure_drone_x.bash  goal_circular.bash  goal_custom_traj.bash  goal_custom_traj_circular.bash  goal_land.bash  goal_point.bash  goal_point_circular.bash  goal_takeoff.bash  launch_all.bash  launch_behaviors.bash  reboot_sim.bash  simulation.bash  stop.bash
motion_controller_pkg/: CMakeLists.txt  package.xml
motion_controller_pkg/action/: GoalPoint.action
motion_controller_pkg/config/: controller_config.yaml
motion_controller_pkg/include/motion_controller_pkg/: motion_controller.hpp  motion_controller_client.hpp
motion_controller_pkg/launch/: motion_controller_launch.py
motion_controller_pkg/msg/: GoalCommand.msg
motion_controller_pkg/rviz/: drone0_config.rviz
motion_controller_pkg/src/: motion_controller.cpp  motion_controller_client.cpp
