<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behaviour_trees_pkg</name>
  <version>0.0.0</version>
  <description>Behaviour trees package for an AS2 simulation</description>
  <maintainer email="migtejgar@alum.us.es">miguel</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_controller_pkg</depend>
  <depend>as2_msgs</depend>
  <depend>as2_core</depend>
  <depend>as2_behavior</depend>
  <depend>as2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>

  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
